--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@prisma/client": "^4.9.0",
     "@types/express": "^4.17.16",
+    "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
