--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "outDir": "dist",
     "esModuleInterop": true,
-    "module": "ES6"
+    "module": "ES6",
+    "moduleResolution": "node"
   },
   "ts-node": {
     "esm": true
