--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.ts",
-    "dev": "npx nodemon src/server.ts"
+    "dev": "npx nodemon src/server.ts",
+    "prisma:seed":"npx prisma db seed"
+  },
+  "prisma":{
+    "seed":"ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
